# micro-synapse

./: README.md  frontmatter.md  hie.yaml  micro-synapse.cabal  stack.yaml
.res/: README.html  style.css
src/: Main.hs
src/Builder/: Note.hs  Tree.hs  Types.hs  Wiki.hs
src/Builder/Styling/: Style.hs  Variables.hs
src/Builder/Templating/: Styling.hs  Templates.hs
src/Cli/: Commands.hs
src/Helpers/: Helpers.hs
src/Parser/: Frontmatter.hs  Innerlinks.hs
src/Web/: Server.hs
styles/: index.html  styling.css  styling.css.map  styling.scss  styling.scss.map
