name:                micro-synapse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/micro-synapse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable micro-synapse
  hs-source-dirs:      src
  other-modules:       Web.Server,
                       Cli.Commands,
                       Builder.Wiki,
                       Builder.Note,
                       Builder.Tree,
                       Builder.Templating.Templates
                       Builder.Templating.Styling
                       Parser.Innerlinks
                       Helpers.Helpers
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       optparse-applicative,
                       directory,
                       random,
                       cmark,
                       yaml,
                       frontmatter,
                       happstack-server,
                       attoparsec,
                       fsnotify,
                       lucid,
                       clay,
                       containers